fix: use managed lazy properties for buildservice parameters and the ext (#57)