@@ -38,11 +38,35 @@ class GCReportServiceRegistrationTest {
         assertTrue(serviceHandler.contains("histogramBucket"))
         assertTrue(serviceHandler.contains("buildOutput"))
         assertTrue(serviceHandler.contains("parameters.logs"))
+        assertTrue(serviceHandler.contains("parameters.logs.set("))
+        assertTrue(serviceHandler.contains("parameters.enabledReport.convention(true)"))
+        assertFalse(serviceHandler.contains("project.provider"))
 
         val plugin = kotlinSources.single { it.name == "GCReportPlugin.kt" }.readText()
         assertTrue(plugin.contains("ServiceHandler"))
         assertFalse(plugin.contains("registerIfAbsent"))
         assertFalse(plugin.contains("\"gcReportService\""))
+        assertTrue(plugin.contains("histogramEnabled.convention(false)"))
+        assertTrue(plugin.contains("histogramBucket.convention("))
+        assertTrue(plugin.contains("enableConsoleLog.convention(false)"))
+
+        val service = kotlinSources.single { it.name == "GCReportService.kt" }.readText()
+        assertTrue(service.contains("val logs: ListProperty<String>"))
+        assertTrue(service.contains("val histogramEnabled: Property<Boolean>"))
+        assertTrue(service.contains("val histogramBucket: Property<Bucket>"))
+        assertTrue(service.contains("val buildOutput: DirectoryProperty"))
+        assertTrue(service.contains("val enabledReport: Property<Boolean>"))
+        assertFalse(service.contains("var logs:"))
+        assertFalse(service.contains("Provider<List<String>>"))
+
+        val extension = kotlinSources.single { it.name == "GCReportExtension.kt" }.readText()
+        assertTrue(extension.contains("abstract class GCReportExtension"))
+        assertTrue(extension.contains("abstract val logs: ListProperty<String>"))
+        assertTrue(extension.contains("abstract val histogramEnabled: Property<Boolean>"))
+        assertTrue(extension.contains("abstract val histogramBucket: Property<Bucket>"))
+        assertTrue(extension.contains("abstract val enableConsoleLog: Property<Boolean>"))
+        assertFalse(extension.contains("ObjectFactory"))
+        assertFalse(extension.contains("open class GCReportExtension"))
     }
 
     @Test
@@ -131,5 +155,45 @@ class GCReportServiceRegistrationTest {
         assertFalse(result.output.contains("GC Log: gc.log"))
         assertFalse(result.output.contains("Collection type"))
         assertFalse(testProjectDir.resolve("build/reports/gcreport/gc.csv").exists())
+    }
+
+    @Test
+    fun `managed extension conventions remain overridable by consumers`() {
+        val gradleProperties = File(testProjectDir, "gradle.properties")
+        val gcLog = "${testProjectDir.absolutePath}/gc.log"
+        gradleProperties.writeText(
+            """
+            org.gradle.jvmargs=-Xlog:gc*:file=$gcLog
+            """.trimIndent(),
+        )
+
+        val buildFile = File(testProjectDir, "build.gradle.kts")
+        buildFile.writeText(
+            """
+            plugins {
+                id("io.github.cdsap.gcreport")
+                java
+            }
+
+            gcReport {
+                logs.set(listOf("$gcLog"))
+                histogramEnabled.set(true)
+                histogramBucket.set(io.github.cdsap.gcreport.plugin.model.Bucket.SquareRoot)
+            }
+            """,
+        )
+
+        val result =
+            GradleRunner.create()
+                .withProjectDir(testProjectDir)
+                .withArguments("tasks")
+                .withPluginClasspath()
+                .build()
+
+        assertTrue(result.output.contains("GC Log: gc.log"))
+        assertTrue(result.output.contains("GC Histogram: gc.log"))
+        assertTrue(result.output.contains("Type: SquareRoot"))
+        assertTrue(testProjectDir.resolve("build/reports/gcreport/gc.csv").exists())
+        assertTrue(testProjectDir.resolve("build/reports/gcreport/histogram_gc.csv").exists())
     }
 }
